assets/canary/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: openshift-ingress-canary
  annotations:
    openshift.io/node-selector: "" # Override global default node selector
    workload.openshift.io/allowed: "management"
